--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,6 @@
   "extends": "next/core-web-vitals",
   "plugins": ["eslint-plugin-react-compiler"],
   "rules": {
-    "react-compiler/react-compiler": "error"
+    // "react-compiler/react-compiler": "error"
   }
 }
